deleted map from javascript and correction z-index for modal-window in index seit

--- a/source/sass/blocks/modal-price.scss
+++ b/source/sass/blocks/modal-price.scss
@@ -13,7 +13,7 @@
   box-shadow: 0 20px 50px 0 hsla(224, 52%, 24%, 0.1);
   background-color: hsl(0, 0%, 100%);
   transform: translateX(-135px);
-  z-index: 10;
+  z-index: 2;
 }
 
 .modal-price__title {
